Bug 229925 - Do not dispatch event to label target if interactive content is found between the event target and the label. r=smaug