dom/base/Element.cpp
@@ -1803,6 +1803,12 @@ Element::IsLabelable() const
   return false;
 }
 
+bool
+Element::IsInteractiveHTMLContent() const
+{
+  return false;
+}
+
 css::StyleRule*
 Element::GetInlineStyleRule()
 {
