dom/html/HTMLInputElement.cpp
@@ -3211,6 +3211,12 @@ HTMLInputElement::Focus(ErrorResult& aError)
   return;
 }
 
+bool
+HTMLInputElement::IsInteractiveHTMLContent() const
+{
+  return mType != NS_FORM_INPUT_HIDDEN;
+}
+
 NS_IMETHODIMP
 HTMLInputElement::Select()
 {
