dom/html/HTMLTextAreaElement.h
@@ -53,6 +53,12 @@ public:
 
   virtual int32_t TabIndexDefault() MOZ_OVERRIDE;
 
+  // Element
+  virtual bool IsInteractiveHTMLContent() const MOZ_OVERRIDE
+  {
+    return true;
+  }
+
   // nsIDOMHTMLTextAreaElement
   NS_DECL_NSIDOMHTMLTEXTAREAELEMENT
 
